--- a/index.tex
+++ b/index.tex
@@ -334,21 +334,20 @@ misused, data analysis can lead to p-hacking, selective reporting,
 inflated effect sizes, and other issues, undermining the quality and
 credibility of the findings.
 
-Multiple recommendations have been proposed to improve data analysis
-practices, such as pre-registration and multiverse analysis. Bayesian
-methods also offer a different paradigm to p-value driven inference for
-interpreting statistical evidence. Most empirical studies of data
-analysis practices focus on specially designed and simplified analysis
-scenarios. While informative, these setups may not adequately capture
-the complexity of the data analysis with significant policy
-implications. {[}In practice, studying the data analysis decisions with
-actual applications is challenging.{]} Analysts may no longer be
-available for interviews due to job changes, and even when they are,
-recalling the full set of decisions and thinking process made during the
-analysis is often infeasible. Moreover, only until the last decades,
-analysis scripts and reproducible materials were not commonly required
-by journals for publishing. {[}As a result, it remains challenging to
-study how analytical decisions are made. {]}
+{[}this is not okay --- Multiple recommendations have been proposed to
+improve data analysis practices, such as pre-registration and multiverse
+analysis. Bayesian methods also offer a different paradigm to p-value
+driven inference for interpreting statistical evidence. Most empirical
+studies of data analysis practices focus on specially designed and
+simplified analysis scenarios. While informative, these setups may not
+adequately capture the complexity of the data analysis with significant
+policy implications. {[}In practice, studying the data analysis
+decisions with actual applications is challenging.{]} Analysts may no
+longer be available for interviews due to job changes, and even when
+they are, recalling the full set of decisions and thinking process made
+during the analysis is often infeasible. Moreover, only until the last
+decades, analysis scripts and reproducible materials were not commonly
+required by journals for publishing. --- up till here{]}
 
 In this work, we develop a tabular format to record analytical decisions
 in data analysis and automate the extraction of these decisions from
@@ -650,57 +649,55 @@ script, and the edited table can be downloaded for future analysis.
 and standardize Large Language Model (LLM)-generated output. (1) the
 default interface after loading the input CSV file. (2) The table view
 will update interactively to reflect the edit: for paper with handle
-``andersen2008size'' and id in 4, 5, 6, replace the value in
-``variable'' with ``pollutant''. (3) After clicking the Confirm button,
-the corresponding \texttt{tidyverse} code is generated, and the table
-view returns to its original unfiltered view with the edits applied. The
-edited data can be downloaded by clicking the Download CSV button.}
+``andersen2008size'' and id in 4, 5, 6, replace the variable NCtot with
+``pollutant''. (3) After clicking the Confirm button, the corresponding
+\texttt{tidyverse} code is generated, and the table view returns to its
+original unfiltered view with the edits applied. The edited data can be
+downloaded by clicking the Download CSV button.}
 
 \end{figure}%
 
 \subsection{Calculate paper similarity and
 visualization}\label{sec-paper-similarity}
 
-Once the decisions have been extracted and validated.
+Once the output has been extracted and validated, the decisions can be
+treated as data for further analysis. In this section, we construct a
+distance metric between pairs of papers based on the similarity of their
+decision choices. This metric can then be used as a distance matrix
+among papers for clustering, dimension reduction, and visualization.
 
-The goal is to construct a distance metric based on similarity of the
-decision choice among papers that could be further used for clustering
-paper based on choices made by different authors in the literature. An
-overview of the method is illustrated in \textbf{?@fig-similarity-diag}.
+For each paper pair, a decision is considered comparable if the papers
+share the same variable and decision type, for example, a parameter
+decision on temperature or the temporal decision on humidity. For two
+decisions to be considered similar, both the decision choice and the
+rationale are taken into account. A similar choice indicates a similar
+final decisions are made in the analysis, whereas a similar reason
+reflects a shared rationale or justification for the choice, even when
+the choices themselves differ, potentially due to differences in the
+underlying data. To assign numerical value for measuring the similarity,
+we use the semantic similarity from text model (default to BERT). For
+parameter type decisions, the statistical method used also contributes
+to the similarity of the decision. Since semantic similarity cannot
+fully capture the difference between statistical methods (the difference
+between smoothing spline and natural spline is not well represented by
+the textual difference of ``smoothing'' and ``natural''), method
+similarity is encoded as binary: 1 if the two papers used the same
+method, and 0 otherwise. The paper similarity is then computed as the
+average similarity across all the matched methods, decisions, and
+reasons. The resulting paper similarity metric can be interpreted as a
+distance measure to cluster and visualize papers based on their decision
+choices.
 
-\begin{itemize}
-\tightlist
-\item
-  \textbf{TODO} some discussion on what it means by for two papers to be
-  similar based on decisions.
-\end{itemize}
-
-The calculation of paper similarity is based on the similarity of
-decisions shared by each paper pair. A decision comparable in two papers
-are the ones that share the same variable and type, e.g.~parameter
-decision on the variable temperature or the temporal lag decision on the
-variable humidity. Depending on the specific pairs, papers have varied
-number of decisions that can be compared and aggregated. While paper
-similarities can be computed for all paper pairs, using the similarity
-of one or two pair of decisions to represent paper similarity is less
-ideal. Hence, before calculating the text similarity of decisions, we
-also include two optional steps to identify and subset the most frequent
-decisions across papers, and to retain only papers that report more than
-a certain number of frequent decisions. Research questions in different
-fields may have different levels of homogeneity, depending on the
-maturity of the field and for air pollution mortality modelling, it is
-helpful to focus on decisions and papers that share a substantial number
-of decisions.
-
-To assign numerical value for the similarity of reason, we use a
-transformer language model, such as BERT, to measure the semantic text
-similarity between the decision itself and its justification. The
-decision similarity is calculated by comparing the decision and reason
-fields of the decisions in each paper pair. To obtain the paper
-similarity metric for each paper pair, we average the decision
-similarities across all the matched decisions. The resulting paper
-similarity metric can be seen as a distance measure to cluster papers
-based on their decision choices and visualize accordingly.
+Because analyses vary in the decisions they report, the number of
+matched decisions differs across paper pairs. In practice, some studies
+may not fully report the decision and reason for every choice made,
+leading to missing data for the matched decisions. Although paper
+similarity can be calculated based on all available matched decisions,
+cares should be taken for pairs with only a small number of matches, as
+the paper similarity may be overly influenced by one or two decisions.
+To address this, users may focus on a set of decisions shared across
+papers and on papers that report a minimal number of these decisions
+when calculating paper similarity.
 
 \section{Results}\label{sec-result}
 
